<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/randomWordsFragment"
        android:icon="@drawable/ic_words"
        android:title="@string/menu_random" />

    <item
        android:id="@+id/learnedWordsFragment"
        android:icon="@drawable/ic_favorites"
        android:title="@string/menu_learned" />

    <item
        android:id="@+id/addWordFragment"
        android:icon="@drawable/ic_add"
        android:title="@string/menu_add_word" />

    <item
        android:id="@+id/gameFragment"
        android:icon="@drawable/ic_game"
        android:title="@string/menu_game" />

    <item
        android:id="@+id/scoreboardFragment"
        android:icon="@drawable/ic_scoreboard"
        android:title="@string/menu_scoreboard" />
</menu>
